--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
             gsutil cp -r gs://{{ $gsPath }}/{{ $model }} /models
             {{- end }}
           else
-            export GOOGLE_APPLICATION_CREDENTIALS=/secret/credentials.json
+            gcloud auth activate-service-account --key-file=/secret/credentials.json
             {{- range $model := $dep.models }}
             gsutil cp -r gs://{{ $gsPath }}/{{ $model }} /models
             {{- end }}
@@ -61,8 +61,8 @@ spec:
           {{- toYaml $dep.resources | nindent 12 }}
       containers:
       - name: tensorflow-serving
-        image: "{{ $dep.image.name | default $.Values.global.image.name }}:{{ $dep.image.tag | default $.Values.global.image.tag }}"
-        imagePullPolicy: {{ $dep.image.pullPolicy | default $.Values.global.image.pullPolicy }}
+        image: "{{ $dep.image.name }}:{{ $dep.image.tag }}"
+        imagePullPolicy: {{ $dep.image.pullPolicy }}
         args:
         - --model_config_file=/config/model-config
         - --enable_profiler=false
