--- a/templates/knative.yaml
+++ b/templates/knative.yaml
@@ -11,6 +11,7 @@
 {{- else }}
 {{- $models = list $dep.name }}
 {{- end }}
+{{- $servingParams := include "custom.servingParams" $dep | fromYaml }}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -65,8 +66,12 @@ spec:
         args:
         - --model_config_file=/config/model-config
         - --enable_profiler=false
+        - --grpc_max_threads={{ $dep.grpc_max_threads | default 10000 }}
         - --file_system_poll_wait_seconds=0
-        - --grpc_max_threads=0
+        - --num_load_threads={{ len $models }}
+        - --grpc_max_threads={{ $servingParams.maxGrpcThreads }}
+        - --tensorflow_inter_op_parallelism={{ $servingParams.interOpConcurrency }}
+        - --tensorflow_intra_op_parallelism={{ $servingParams.intraOpConcurrency }}
         env:
           {{- toYaml $.Values.global.env | nindent 10 }}
         ports:
