--- a/values.yaml
+++ b/values.yaml
@@ -1,4 +1,3 @@
-
 global:
   image:
     name: us-central1-docker.pkg.dev/idnorm/idnorm/tfserving
@@ -20,7 +19,7 @@ global:
       maxGrpcThreads: 0
 
   imagePullSecrets: []
-  env: 
+  env:
     - name: VD_DEC
       value: "1"
     # - name: gcr-pull-secret
@@ -40,7 +39,7 @@ global:
 
   service:
     type: ClusterIP
-    port: 8500
+    port: 80
     targetPort: 8500
     annotations: {}
     labels: {}
@@ -51,7 +50,7 @@ global:
     maxReplicas: 10
     targetCPUUtilizationPercentage: 80
     targetMemoryUtilizationPercentage: 80
-  
+
   modelStorage:
     gc:
       enabled: true
@@ -59,10 +58,11 @@ global:
       path: ""
       credentialsSecret: ""
 
-deployments: []
+deployments:
+  []
   # - name: extraction
   #   # Can be empty, if empty it will use the deployment name as the modelId
-  #   models: 
+  #   models:
   #     - 63e60ef2e56ea461a6a16a4d
   #     - classifier_6_27_0
   #     - extractor_6_28_0
@@ -99,4 +99,3 @@ deployments: []
   #   # Can override global.params
   #   params:
   #     serving:
-
