--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -30,6 +30,10 @@ spec:
         app.kubernetes.io/name: tensorflow-serving
         deploymentName: {{ $dep.name }}
     spec:
+      {{- if $dep.nodeSelector }}
+      nodeSelector:
+        {{- toYaml $dep.nodeSelector | nindent 8 }}
+      {{- end }}
       imagePullSecrets:
         {{- toYaml $.Values.global.imagePullSecrets | nindent 8 }}
       initContainers:
